task_1/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    name: web

spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: docker.io/kayne787/task_1
        imagePullPolicy: Always
        resources: {}
        ports:
          - containerPort: 5010
status: {}

---

apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    run: web
spec:
  selector:
    app: web
  ports:
  - port: 5010
    protocol: TCP
    targetPort: 5010
  type: NodePort
