task_1/web-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    run: web
spec:
  selector:
    app: web
  ports:
  - port: 5010
    protocol: TCP
    targetPort: 5010
  type: NodePort
